<resources>
    <string name="app_name">Raleigh Tour Guide</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="entertainment">Entertainment</string>
    <string name="landmarks">Landmarks</string>
    <string name="emergency">Emergency</string>
    <string name="rest_cat_asian">Asian</string>
    <string name="rest_cat_mexican">Mexican</string>
    <string name="rest_cat_italian">Italian</string>
    <string name="rest_cat_southern">Southern</string>
    <string name="cat_all">All</string>
    <string name="ent_cat_movietheatres">Venues</string>
    <string name="ent_cat_activities">Activities</string>
    <string name="ent_cat_museums">Museums</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="message_emergency">You should probably just call 911</string>
    <string name="ok">Ok</string>
    <string name="message_loading">Loading&#8230;</string>
    <string name="message_nointernet">Cannot load images, no internet connection</string>
    <string name="buku">Buku Raleigh</string>
    <string name="davidsDumplings">David\'s Dumplings</string>
    <string name="sushiBlues">Sushi Blues</string>
    <string name="rest_amedeos">Amedeos Italian Restaurant</string>
    <string name="rest_brioTuscan">BRIO Tuscan Grille</string>
    <string name="hotel_sheraton">Sheraton Raleigh Hotel</string>
    <string name="hotel_holidaydowntown">Holiday Inn Raleigh Downtown</string>
    <string name="hotel_marriottcitycenter">Raleigh Marriott City Center</string>
    <string name="rest_casaCarbone">Casa Carbone Ristorante Italiano</string>
    <string name="rest_chubbytacos">Chubby\'s Tacos</string>
    <string name="rest_elrodeo">El Rodeo Mexican Restaurant</string>
    <string name="rest_driftwood">Driftwood Southern Kitchen</string>
    <string name="muse_ncmusNatSci">North Carolina Museum of Natural Sciences</string>
    <string name="muse_ncmuseHist">North Carolina Museum of History</string>
    <string name="muse_ncmuseArt">North Carolina Museum of Art</string>
    <string name="venue_southlandBallroom">Southland Ballroom</string>
    <string name="venue_pourhouse">The Pour House Music Hall</string>
    <string name="venue_redhatamp">Red Hat Amphitheater</string>
    <string name="act_skyzone">Sky Zone Trampoline Park</string>
    <string name="landmark_nccapitol">North Carolina State Capitol</string>
    <string name="landmark_govmansion">Governors Mansion</string>
    <string name="description_rest_buku">
        Located at the corner of Wilmington and Davie Street, bu•ku: Global Street Food is a local establishment telling a global story. Inspired by the pushcarts of street vendors in cities across the globe, we harvest an array of unique and distinct flavors and present them authentically in a virtual kaleidoscope of plates. The common link being, these are foods that people love.
    </string>
    <string name="description_rest_davidsDumplings">
        This unique eatery is owned and operated by Chef David Mao, a successful establishment owner and culinary innovator in Raleigh since 1976. Over the years, if you have eaten at the Mandarin House, The Abacus, The Great Mall of China, The China Cafe and Grille and most recently, the Duck and Dumpling, then you have enjoyed David\’s inspired menus.
    </string>
    <string name="description_rest_sushiblues">
        One of the triangle\'s coolest night spots, Sushi Blues Cafe offers some of the best Sushi and Japanese food, along a softly lit blues/jazz atmosphere.
    </string>
    <string name="description_hotel_sheraton">
        Make yourself at home here in Raleigh, in one of our 353 spacious and beautifully appointed guest rooms and suites, each of which features the famous Sheraton Signature Bed. Upgrade to our Club Rooms for exclusive lounge access. Host a successful meeting in our 18,000 square feet of recently updated, contemporary meeting and event space, and make use of our expert planning services.
    </string>
    <string name="description_rest_amedeos">
        In 1963, \“Amedeo\” Richard DeAngelis opened a small Italian restaurant to serve his family\’s recipes. The company grew in size and popularity and became an NC State and Raleigh favorite. In February of 2010, a company named Wolfgang, Inc, consisting of David Harris and Rodney Byrd, purchased Amedeo\’s.
    </string>
    <string name="description_rest_brioTuscan">
        At BRIO, we celebrate life, love and all things Italian!  In our restaurants, the chef-inspired cuisine at BRIO is simply prepared using the finest and freshest ingredients, with an emphasis on high-quality steaks, housemade pasta specialties and flatbreads prepared in an authentic Italian oven.
    </string>
    <string name="description_hotel_holidaydowntown">
        Holiday Inn Raleigh Downtown, located in the heart of the city, where you will find everything. Shopping, dining, entertainment and the arts. You are within easy walking distance to the Raleigh Convention Center, Duke Energy Center for the Performing Arts and five free museums.Located just 13 miles from the Raleigh-Durham International Airport, you\’ll spend less time in traffic and more time doing what you came to Raleigh to do.
    </string>
    <string name="description_hotel_marriottcitycenter">
        The Raleigh Marriott City Center offers an elevated experience for business and leisure travelers alike. Our hotel guests can enjoy spacious, well-designed hotel rooms and suites, a vast array of luxury amenities, and intuitive service. The comforts of home await you here in Raleigh in our thoughtfully appointed hotel rooms; each one features a flat-screen TV, marble bathrooms, an ergonomic work area, and luxury bedding.
    </string>
    <string name="description_rest_casaCarbone">
        Located right off Glenwood Avenue, Casa Carbone is a timeless local favorite. Delicious Italian cuisine and a warm family atmosphere, keep Raleigh coming back time and again.
    </string>
    <string name="description_rest_chubbytacos">
        See reviews on Facebook
    </string>
    <string name="description_rest_elrodeo">
        See reviews on Facebook
    </string>
    <string name="description_rest_driftwood">
        We feature a unique Chef\'s table featuring an open kitchen, a communal style semi-private room, and a large open dining room. Our ever-changing menu showcases the finest of ingredients from supporting local farms and purveyors, allowing us to make as much as possible in house.
    </string>
    <string name="description_musncNatSci">
        The North Carolina Museum of Natural Sciences is located in Raleigh, North Carolina. This museum is the oldest established museum in North Carolina and the largest museum of its kind in the Southeast.
    </string>
    <string name="description_muse_ncmuseHist">
        An affiliate of the Smithsonian Institution,the North Carolina Museum of History is located in downtown Raleigh, North Carolina. Admission is free.
    </string>
    <string name="description_muse_ncmuseArt">
        The North Carolina Museum of Art is an art museum in Raleigh, North Carolina which opened in 1956 as the first major museum collection in the country to be formed by State legislation and funding.
    </string>
    <string name="description_southlandBallroom">
        Southland Ballroom is one of the premier live music venues in the Triangle area of North Carolina. Located in Raleigh\’s entertainment district, Glenwood South, Southland is in close proximity to many excellent restaurants and hotels.
    </string>
    <string name="description_pourhouse">
        We love great music, great people, and great drinks at The Pour House Music Hall. We have been Raleigh\’s home for live music since 1997 and are focused on bringing you an eclectic mixture of the best local and nationally touring bands.
    </string>
    <string name="description_redhatamp">
        Since opening on June 4, 2010, The Red Hat Amphitheater has become a beacon for live entertainment in the Southeast. Just steps from the fun and energy of downtown Raleigh\’s bars, clubs, galleries and restaurants, this 5,000-seat venue blends the state-of-the-art with the simply convenient.
    </string>
    <string name="description_act_skyzone">
        Sky Zone is the world\’s first indoor trampoline park. We\’re the inventors of \“fun fitness\” and the makers of trampolines as far as the eye can see. We give you one of the greatest workouts ever combined with awesome, healthy fun. We\’ve been voted the number one \“out of the box\” workout and the \“best party ever.\”
    </string>
    <string name="description_landmark_nccapitol">
        Architectural Historians internationally have acknowledged that the Capitol building is a masterpiece of American architecture. The North Carolina State Capitol Foundation has restored the furnishings of the building, including all of the original desks and dais, reconstructed chairs as needed and is in the process of conserving the artifacts, including statuary and plaques.
    </string>
    <string name="description_govmansion">
        The first official residence built for North Carolina\'s governor was Tryon Palace in New Bern. Completed in 1770 as a home for royal governor William Tryon, and serving as the official seat of government, the structure was built largely with money accrued through taxation of the colony.
    </string>
    <string name="phoneNumber_rest_buku">919-834-6963</string>
    <string name="phoneNumber_rest_sushiblues">919-664-8061</string>
    <string name="phoneNumber_rest_davidsDumplings">919-239-4536</string>
    <string name="phoneNumber_hotel_sheraton">919-834-9900</string>
    <string name="phoneNumber_hotel_holidaydowntown">919-832-0501</string>
    <string name="phoneNumber_hotel_marriottcitycenter">919-833-1120</string>
    <string name="phoneNumber_rest_amedeos">919-851-0473</string>
    <string name="phoneNumber_rest_brioTuscan">919-881-2048</string>
    <string name="phoneNumber_rest_casaCarbone">919-781-8750</string>
    <string name="phoneNumber_rest_chubbytacos">919-781-4480</string>
    <string name="phoneNumber_rest_elrodeo">919-571-1188</string>
    <string name="phoneNumber_rest_drifwood">919-977-8360</string>
    <string name="phoneNumber_muse_ncmuseNatSci">919-707-9800</string>
    <string name="phoneNumber_muse_ncmuseHist">919-807-7900</string>
    <string name="phoneNumber_muse_ncmuseArt">919-839-6262</string>
    <string name="phoneNumber_venue_southlandBallroom">919-821-0023</string>
    <string name="phoneNumber_venue_pourhouse">919-821-1120</string>
    <string name="phoneNumber_venue_redhatamp">919-966-8800</string>
    <string name="phoneNumber_act_skyzone">919-948-4450</string>
    <string name="phoneNumber_landmark_nccapitol">919-733-4994</string>
    <string name="phoneNumer_govmansion">919-733-3871</string>
    <string name="address_rest_buku">110 E Davie St, Raleigh, NC</string>
    <string name="address_rest_sushiBlues">301 Glenwood Ave, Raleigh NC</string>
    <string name="address_rest_davidsDumplings">1900 Hillsborough St, Raleigh, NC</string>
    <string name="address_hotel_sheraton">421 S Salisbury St, Raleigh, NC</string>
    <string name="address_hotel_holidadowntown">320 Hillsborough St, Raleigh, NC</string>
    <string name="address_hotel_marriottcitycenter">500 Fayetteville St, Raleigh, NC</string>
    <string name="address_rest_amedeos">3905 Western Blvd, Raleigh, NC</string>
    <string name="address_rest_brioTuscan">4325 Glenwood Ave, Raleigh, NC</string>
    <string name="address_rest_casaCarbone">Oak Park Shopping Center, 6019 Glenwood Ave A, Raleigh, NC</string>
    <string name="address_rest_chubbytacos">2444 Wycliff Rd, Raleigh, NC</string>
</resources>