<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hotels" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_landmarks"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/landmarks" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_emergency"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/emergency" />

        </menu>
    </item>

</menu>
